# diskhound

./: .gitignore  CHANGELOG.md  LICENSE  README.md  electron-builder.yml  index.html  package.json  tsconfig.json  tsdown.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/screenshots/: README.md
native/diskhound-native-scanner/: Cargo.toml
native/diskhound-native-scanner/src/: main.rs  mft.rs  usn_journal.rs
scripts/: benchmark-scan.mjs  dev-electron.mjs  dev.mjs  electron-launcher.mjs  generate-icon.mjs  generate-screenshot-placeholders.mjs  start-electron.mjs  sync-version-from-tag.mjs
src/: affinityRuleEngine.ts  electron-env.d.ts  elevation.ts  linuxDesktopIntegration.ts  main.ts  nativeScanner.ts  preload.ts  usnMonitor.ts
src/renderer/: App.tsx  index.css  main.tsx  nativeApi.ts
src/renderer/components/: ChangesView.tsx  DiskIoView.tsx  DiskPicker.tsx  DuplicatesView.tsx  EasyMoveView.tsx  ErrorBoundary.tsx  FileIcon.tsx  FileList.tsx  FolderList.tsx  GpuView.tsx  MemoryView.tsx  Overview.tsx  ProcessHeatmap.tsx  ProcessIcon.tsx  (+6 more)
src/scan/: folderTreeWorker.ts  fullDiffWorker.ts  scanWorker.ts
src/shared/: contracts.ts  diskIoSampler.ts  diskMonitor.ts  duplicateHashCache.ts  duplicates.ts  easyMoveStore.ts  folderTreeWorkerProtocol.ts  folderTreeWorkerRuntime.ts  fullDiffCacheStore.ts  fullDiffWorkerProtocol.ts  fullDiffWorkerRuntime.ts  gpuSampler.ts  pathUtils.ts  processMonitor.ts  scanDiff.ts  scanHistory.ts  scanIndex.ts  scanStore.ts  settingsStore.ts  suggestions.ts  treemapCache.ts  usnCursorStore.ts  windowStateStore.ts
(+14 files in other folders)
