[package]
name = "diskhound-native-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
jwalk = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
flate2 = "1.0"
crossbeam-channel = "0.5"
num_cpus = "1.16"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
